--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Misi untuk Mendapatkan iPhone</title>
+        <meta property="og:image" content="https://b.top4top.io/p_3031g7hp40.jpg">
+            <link rel="shortcut icon" href="https://b.top4top.io/p_3031g7hp40.jpg" type="image/x-icon" />
+    <meta property="og:description" content="Salma di ewe sugiarto, kakeknya, kakaknya, adeknya, sepupunya">
+    <meta property="og:url" content="https://salma-autis.vercel.app/">
+    <title>Salma Mau Aipong Diperkosa Gais</title>
     <style>
         body {
             background-color: black; /* Latar belakang hitam */
@@ -93,7 +97,7 @@
 </head>
 <body>
     <h2>/ misi salma autis mendapatkan iphone</h2>
-    <img class="salmasu" src="https://i.postimg.cc/DZ6rpnDj/IMG-20240419-WA0096.jpg" alt="Sugiarto ewe Prapti"/>
+    <img class="salmasu" src="https://b.top4top.io/p_3031g7hp40.jpg" alt="Sugiarto ewe Salma"/>
     <hr color="red">
 <marquee scrollamount="8">ada <span style="color: red; font-weight: bold;">pacar</span> lupa kawan udah <span style="color: red; font-weight: bold;">gendut</span> banyak <span style="color:red; font-weight: bold;">gaya</span> siapa lagi kalo bukan<span style="color: red; font-weight: bold;"> salma autis&#x1F639;</span></marquee>
     <hr color="red">
@@ -118,6 +122,6 @@
         </ol>
     </div>
     <footer>&copy By lu1s - d4n - f4nz - k4lz - h1ro </footer>
-    <img class="eberardos" src="https://i.postimg.cc/1zBTLmRb/IMG-20240419-WA0105.jpg" alt="EBERARDOS" />
+    <img class="eberardos" src="https://a.top4top.io/p_3031gt4jj0.jpg" alt="EBERARDOS" />
 </body>
-  </html>
+</html>
