--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                  <li>Ngewe sekeluarga  <span class="misi">(50/55)</span></li>            
         </ol>
     </div>
-    <footer>&copy By lu1s - d4n - f4nz - k4lz - h1ro </footer>
+    <footer>&copy By lu1s - d4n - f4nz - k4lz - h1ro - n0eX</footer>
     <img class="eberardos" src="https://a.top4top.io/p_3031gt4jj0.jpg" alt="EBERARDOS" />
 </body>
 </html>
