--- a/index.html
+++ b/index.html
@@ -158,11 +158,40 @@
      line-height: 55px;*/
    }
   
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Warna latar belakang gelap dengan opasitas */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Pastikan loading overlay muncul di atas konten lain */
+}
+
+.loading-spinner {
+    border: 8px solid salmon; /* Warna border spinner */
+    border-top: 8px solid transparent;
+    border-radius: 50%;
+    width: 50px; /* Ukuran spinner */
+    height: 50px; /* Ukuran spinner */
+    animation: spin 1s linear infinite; /* Animasi putar */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
     </style>
 </head>
 <script>
 </script>
 <body>
+  <div id="loading-overlay">
+  <div class="loading-spinner"></div>
+</div>
 <div class="moving-text-container">
   <h2 class="moving-text">> Salma Autis <</h2>
 </div>
@@ -201,5 +230,11 @@ dictionary
         <br>
     <footer>&copy By lu1s - d4n - f4nz - k4lz - h1ro - n0eX</footer>
     <img class="eberardos" src="https://a.top4top.io/p_3031gt4jj0.jpg" alt="EBERARDOS" />
+    <script>
+      window.addEventListener('load', function() {
+    const loadingOverlay = document.getElementById('loading-overlay');
+    loadingOverlay.style.display = 'none'; // Sembunyikan loading overlay setelah konten dimuat
+});
+    </script>
 </body>
 </html>
