--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.cdnfonts.com/css/finlandica" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link href="https://fonts.cdnfonts.com/css/red-hat-mono" rel="stylesheet">
+<script src="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.14.1/dist/sweetalert2.all.min.js
+"></script>
     <title>Info Pribadi Salma Cik</title>
     <style>
         body {
@@ -174,6 +178,14 @@ hr {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        
+        .swal2-title,
+        .swal2-content {
+    font-family: 'Red Hat Mono', sans-serif;
+}
+.swal2-html-container {
+  font-family: Sans-Serif;
+}
     </style>
 </head>
 <body>
@@ -222,12 +234,29 @@ dictionary
        </span>Only, Batu Nisan, Angpao</div></li>
           <li class="list">Ex : <div class="text">&#x1F494; Devan, Rey, Husein, Arya, Adit, Tino, Kevin, Iky, Charless <!--<span style="color:white; font-size:11px; background: Fuchsia; position: relative; bottom: 5px; border-radius: 10px; border: 1px solid Fuchsia;">sasimo cik</span>--></div></li>
   </ul>
-  <footer><b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a></b></footer>
+  <footer><b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a><br><span style="font-size: 14px;"></span></b></footer>
   <script>
       window.addEventListener('load', function() {
           const loadingOverlay = document.getElementById('loading-overlay');
           loadingOverlay.style.display = 'none';
       });
+     
+  window.onload = function() {
+    Swal.fire({
+      title: 'Woi Gembrot😹',
+      text: 'Woi salma tolol gembrot negro yapit, debat sini anjg bawa aja semua temen lu sini😹',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonText: 'Gas',
+      cancelButtonText: 'Gak, Gue Cupu😭'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location.href = 'https://chat.whatsapp.com/LDPvQRyl4ad40If8FLgunI';
+      } else if (result.isDismissed) {
+        console.log('Pengguna memilih TIDAK');
+      }
+    });
+  };
   </script>
 </body>
     </html>
