--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ hr {
         }
 
         .text {
-            color: salmon;
+            color: red;
             text-shadow: 1px 1px 10px #000, 1px 1px 10px #ccc;
         }
         .agama,.sikap {
@@ -219,7 +219,7 @@ hr {
   <h3 class="peler"><span class="material-symbols-outlined private">lock</span>Salma Personal Information</h3>
   <ul>
       <li class="list">Name : <div class="text">&#x1F930; Salma apriliyani salsabilanjing</div></li>
-      <li class="list">Residence : <div class="map"><span class="material-symbols-outlined">location_on</span><span style="color: salmon">Sidobasuki🤓, rt/rw 25/12. kel. bumiagung. kec tegineneng. kab. pesawaran, lampung</span></li>
+      <li class="list">Residence : <div class="map"><span class="material-symbols-outlined">location_on</span><span style="color: red;">Sidobasuki🤓, rt/rw 25/12. kel. bumiagung. kec tegineneng. kab. pesawaran, lampung</span></li>
       <li class="list">Date Of Birth : <div class="text"><i class="fa-solid fa-cake-candles lahirnya-bocah-autis"></i> 5 April 2008</div></li>
       <li class="list">Age : <div class="text">16 Tahun</div></li>
       <li class="list">Religion : <div class="text"><span class="material-symbols-outlined agama">mosque</span>Islam</div></li>
@@ -259,4 +259,4 @@ dictionary
   };
   </script>
 </body>
-    </html>
+                                                                                                                                                                                                                                </html>
