--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ dictionary
        </span>Only, Batu Nisan, Angpao</div></li>
           <li class="list">Ex : <div class="text">&#x1F494; Devan, Rey, Husein, Arya, Adit, Tino, Kevin, Iky, Charless <!--<span style="color:white; font-size:11px; background: Fuchsia; position: relative; bottom: 5px; border-radius: 10px; border: 1px solid Fuchsia;">sasimo cik</span>--></div></li>
   </ul>
-  <footer><b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a><br><span style="font-size: 14px;"></span></b></footer>
+  <br><br><br><br><br><br>
+<footer>
+   <div>
+    <img src="eberardos.png" alt="Logo Eberardos" style="width: auto; height: 100px;" />
+  </div>
+  <b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a><br>
+  <span style="font-size: 14px;"></span></b>
+</footer>
 </body>
 </html>
