--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ dictionary
   <br><br><br><br><br><br>
 <footer>
    <div>
-    <img src="eberardos.png" alt="Logo Eberardos" style="width: auto; height: 100px;" />
+    <img src="eberardos.png" alt="Logo Eberardos" style="width: auto; height: 100px; box-shadow: 0 0 10px 1px white; border-radius: 50%;" />
   </div>
   <b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a><br>
   <span style="font-size: 14px;"></span></b>
