--- a/index.html
+++ b/index.html
@@ -66,12 +66,24 @@ dictionary
           <li class="list">Ex : <div class="text">&#x1F494; Devan, Rey, Husein, Arya, Adit, Tino, Kevin, Iky, Charless <!--<span style="color:white; font-size:11px; background: Fuchsia; position: relative; bottom: 5px; border-radius: 10px; border: 1px solid Fuchsia;">sasimo cik</span>--></div></li>
   </ul>
   <br><br><br><br><br><br>
-<footer>
-   <div>
-    <img src="eberardos.png" alt="Logo Eberardos" style="width: auto; height: 100px; box-shadow: 0 0 10px 1px white; border-radius: 50%;" />
+<footer style="position: fixed; bottom: 0; width: 100%; background-color: #333; padding: 10px 0; text-align: center;">
+  <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
+    <div style="text-shadow: 0 0 10px white; color: black; font-weight: bold;">
+      SURPRISE!!
+    </div>
+    
+    <div>
+      <img src="eberardos.png" alt="Logo Eberardos" style="width: auto; height: 100px; box-shadow: 0 0 10px 1px white; border-radius: 50%;" />
+    </div>
+    
+    <div style="text-shadow: 0 0 10px white; color: black; font-weight: bold;">
+      SURPRISE!!
+    </div>
   </div>
+
   <b>By <a style="color: #1877F2; text-decoration: none;" href="#">Eberardos</a><br>
   <span style="font-size: 14px;"></span></b>
-</footer>
+</footer><br>
+<span style="font-size: 14px;"></span></b>
 </body>
 </html>
